--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
   <body>
     <!-- SCM Music Player http://scmplayer.net -->
-    <script type="text/javascript" src="http://scmplayer.net/script.js"
-    data-config="{'skin':'http://static.tumblr.com/d41lcii/7Ysmre077/simplegray.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':[{'title':'DJ KHALED','url':'https://www.youtube.com/watch?v=_5HMcE06__U&list=LL3CYMsTi31nqD56lBFP9Etg&index=61'}]}" ></script>
-    <!-- SCM Music Player script end -->
+  <script type="text/javascript" src="http://scmplayer.net/script.js"
+  data-config="{'skin':'http://static.tumblr.com/d41lcii/7Ysmre077/simplegray.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':[{'title':'FIne','url':'https://www.youtube.com/watch?v=wj5G4FMUSNI&index=215&list=LL3CYMsTi31nqD56lBFP9Etg'}]}" ></script>
+  <!-- SCM Music Player script end -->
+
 
 
     <h2>CHACKALOW</h2>
